--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:textColor="@color/purple_500"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textColor="@color/purple_500" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -38,11 +38,25 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnNext"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/next_button" />
+        android:layout_height="wrap_content">
 
+
+        <Button
+            android:id="@+id/btnPrevious"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/previous_button" />
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_height="wrap_content"
+            android:text="@string/next_button" />
+
+    </LinearLayout>
 
 </LinearLayout>
